Bug 316319 - report bug link does not open bugzilla form
Summary: report bug link does not open bugzilla form
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: call-ui (other bugs)
Version First Reported In: git-latest
Platform: Other Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-07 15:33 UTC by Alin M Elena
Modified: 2013-03-19 09:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alin M Elena 2013-03-07 15:33:03 UTC
report bug link from ktp-call-ui does not open bugzilla form

Reproducible: Always
Comment 1 David Edmundson 2013-03-19 09:30:18 UTC
Git commit 6b240ff2045288cd3f39b864b3ec307ad77ffbd4 by David Edmundson.
Committed on 19/03/2013 at 10:29.
Pushed by davidedmundson into branch 'master'.

Set correct productName for bugzilla reporting

M  +2    -0    src/dialout/main.cpp
M  +1    -0    src/main.cpp

http://commits.kde.org/telepathy-call-ui/6b240ff2045288cd3f39b864b3ec307ad77ffbd4