Set correct productName for bugzilla reporting

BUG: 316319